--- a/index.html
+++ b/index.html
@@ -1,12 +1,98 @@
 <!DOCTYPE html>
-<html lang="ru">
-<head>
-	<meta charset="UTF-8">
-	<meta keywords="трансфер новосибирск новокузнецк, такси новосибирск новокузнецк ">
-	<link rel="stylesheet" href="css/style.css">
-	<title>exemple</title>
-<body>
-<h1>наш синхронизированый сайт</h1>
-<h2>внес изменения</h2>
+<html lang="en">
+  <head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Bootstrap 101 Template</title>
 
+    <!-- Bootstrap -->
+    <link href="css/bootstrap.min.css" rel="stylesheet">
+    <link href="css/style.css" rel="stylesheet">
+
+    <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
+    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
+    <!--[if lt IE 9]>
+      <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
+      <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
+    <![endif]-->
+  </head>
+  <body>
+
+
+
+  <!-- - Сверстать ряд, в котором 6 иконок. Отображаться они должны с следующем виде: 
+а) на самых маленьких мониторах в ряд по 1 иконке 
+б) на маленьких мониторах в ряд по 2 иконки 
+в) на средних мониторах в ряд по 3 иконки 
+г) на больших мониторах в ряд по 6 колонок 
+в колонке все выровнять по центру 
+ -->
+ <section id="main">
+ 	<div class="container">
+	 	<div class="job">
+			 	<h4 class=text-center>Сверстать ряд, в котором 6 иконок. <br>
+			 	Отображаться они должны с следующем виде</h4>
+			 	<br>
+
+			 	<ul>
+			 		<li>а) на самых маленьких мониторах в ряд по 1 иконке </li>
+			 		<li>б) на маленьких мониторах в ряд по 2 иконки </li>
+			 		<li>в) на средних мониторах в ряд по 3 иконки </li>
+			 		<li>г) на больших мониторах в ряд по 6 колонок </li>
+			 		<li>в колонке все выровнять по центру </li>
+			 	</ul>
+	    </div>
+ 		<div class="row">
+ 			<div class="col-lg-2 col-md-4 col-sm-6 col-xs-12 text-center"><img src="img/bibi.png" alt=""></div>
+ 			<div class="col-lg-2 col-md-4 col-sm-6 col-xs-12 text-center"><img src="img/bibi1.png" alt=""></div>
+ 			<div class="col-lg-2 col-md-4 col-sm-6 col-xs-12 text-center"><img src="img/bibi2.png" alt=""></div>
+ 			<div class="col-lg-2 col-md-4 col-sm-6 col-xs-12 text-center"><img src="img/bibi3.png" alt=""></div>
+ 			<div class="col-lg-2 col-md-4 col-sm-6 col-xs-12 text-center"><img src="img/bibi4.png" alt=""></div>
+ 			<div class="col-lg-2 col-md-4 col-sm-6 col-xs-12 text-center"><img src="img/bibi5.png" alt=""></div>
+ 		</div>
+ 	</div>
+ </section>
+
+ <!--    
+
+- Сверстать элемент, высотой 100px с рамкой в 2px цветом #000. Элемент должен занимать 8 колонок 
+Внутри этого элемента расположить 4 элемента с высотой 50px и сплошным фоном зеленого цвета. Элементы должны занимать одинаковую ширину (количество колонок)
+ -->
+
+  <section id="lesson_2">
+  	<div class="container">
+	  	<div class="row job">
+	             <ol>
+	             	<li>Сверстать элемент, высотой 100px с рамкой в 2px цветом #000.</li>
+	             	<li>Элемент должен занимать 8 колонок </li>
+	             	<li>Внутри этого элемента расположить 4 элемента с высотой 50px и сплошным фоном зеленого цвета.</li>
+	             	<li>Элементы должны занимать одинаковую ширину (количество колонок)</li>
+	             </ol>
+	  	</div>
+  		<div class="row level_1">
+  			<div class=" col-lg-8 col-md-8 col-sm-8 col-xs-8 fon  text-center ">
+  				<div class="row level_2">
+  					<div class="col-lg-3 col-md-3 col-sm-3 col-xs-3 inside_the_level">
+  						1
+  					</div>
+  					<div class="col-lg-3 col-md-3 col-sm-3 col-xs-3 inside_the_level">
+  						2
+  					</div>
+  					<div class="col-lg-3 col-md-3 col-sm-3 col-xs-3 inside_the_level">
+  						3
+  					</div>
+  					<div class="col-lg-3 col-md-3 col-sm-3 col-xs-3 inside_the_level">
+  						4
+  					</div>
+  				</div>
+  			</div>
+  		</div>
+  	</div>
+  </section>
+    <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
+    <!-- Include all compiled plugins (below), or include individual files as needed -->
+    <script src="js/bootstrap.min.js"></script>
+  </body>
 </html>
