добавил изменения обернул в col lg задания

--- a/index.html
+++ b/index.html
@@ -30,18 +30,20 @@
  -->
  <section id="main">
  	<div class="container">
-	 	<div class="job">
-			 	<h4 class=text-center>Сверстать ряд, в котором 6 иконок. <br>
-			 	Отображаться они должны с следующем виде</h4>
-			 	<br>
+	 	<div class="row job">
+		 	<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+				 	<h4 class=text-center>Сверстать ряд, в котором 6 иконок. <br>
+				 	Отображаться они должны с следующем виде</h4>
+				 	<br>
 
-			 	<ul>
-			 		<li>а) на самых маленьких мониторах в ряд по 1 иконке </li>
-			 		<li>б) на маленьких мониторах в ряд по 2 иконки </li>
-			 		<li>в) на средних мониторах в ряд по 3 иконки </li>
-			 		<li>г) на больших мониторах в ряд по 6 колонок </li>
-			 		<li>в колонке все выровнять по центру </li>
-			 	</ul>
+				 	<ul>
+				 		<li>а) на самых маленьких мониторах в ряд по 1 иконке </li>
+				 		<li>б) на маленьких мониторах в ряд по 2 иконки </li>
+				 		<li>в) на средних мониторах в ряд по 3 иконки </li>
+				 		<li>г) на больших мониторах в ряд по 6 колонок </li>
+				 		<li>в колонке все выровнять по центру </li>
+				 	</ul>
+			</div>	
 	    </div>
  		<div class="row">
  			<div class="col-lg-2 col-md-4 col-sm-6 col-xs-12 text-center"><img src="img/bibi.png" alt=""></div>
@@ -63,12 +65,14 @@
   <section id="lesson_2">
   	<div class="container">
 	  	<div class="row job">
-	             <ol>
-	             	<li>Сверстать элемент, высотой 100px с рамкой в 2px цветом #000.</li>
-	             	<li>Элемент должен занимать 8 колонок </li>
-	             	<li>Внутри этого элемента расположить 4 элемента с высотой 50px и сплошным фоном зеленого цвета.</li>
-	             	<li>Элементы должны занимать одинаковую ширину (количество колонок)</li>
-	             </ol>
+		  	 <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">	
+		             <ol>
+		             	<li>Сверстать элемент, высотой 100px с рамкой в 2px цветом #000.</li>
+		             	<li>Элемент должен занимать 8 колонок </li>
+		             	<li>Внутри этого элемента расположить 4 элемента с высотой 50px и сплошным фоном зеленого цвета.</li>
+		             	<li>Элементы должны занимать одинаковую ширину (количество колонок)</li>
+		             </ol>
+		      </div>      
 	  	</div>
   		<div class="row level_1">
   			<div class=" col-lg-8 col-md-8 col-sm-8 col-xs-8 fon  text-center ">
